# nubi_challenge

./: .env.template  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: c74c72694869_init.py
scripts/: dump_users.py  nubi_users.json
users/: filters.py  models.py  router.py  schemas.py  services.py
users/tests/: fixtures.py  test_users.py
utils/: pagination.py
